--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="style.css" rel="stylesheet" />
     <script src="Display.js"></script>
     <script src="Calculadora.js"></script>
-    <script src="index.js" defer></script>
+    <script src="index.js"></script>
 </head>
 <body>
     <h1>Calculadora Online</h1>
